@@ -1,3 +1,9 @@
+2009-07-29  higepon  <higepon@users.sourceforge.jp>
+
+        * lib/mosh/cgi.ss (decode): Fixed a bug about make-custom-binary-input-port.
+
+        * test/cgi.scm: Added tests for (mosh cgi).
+
 2009-07-28  higepon  <higepon@users.sourceforge.jp>
 
         * library.scm (create-mosh-cache-dir): LOCALAPPDATA.
